[project]
name = "bdd-pytorch-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "torch[cpu]>=2.4.1",
    "torchvision[cpu]>=0.19.1",
]


# [project.optional-dependencies]
# cpu = [
#     "torch~=2.4.0",
#     "torchvision~=0.19.0",
# ]

# [tool.uv]
# conflicts = [
#   [
#     { extra = "cpu" },
#   ],
# ]

# [tool.uv.sources]
# torch = [
#   { index = "pytorch-cpu", extra = "cpu" },
# ]
# torchvision = [
#   { index = "pytorch-cpu", extra = "cpu" },
# ]

# [[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
# explicit = true

